# JAMscript-ESP32-port

./: .gitignore  README.md
cside-main/: .gitignore  CMakeLists.txt
cside-main/inc/: cnode.h  command.h  core.h  nvoid.h  processor.h  system_manager.h  task.h  tboard.h  utils.h  zenoh.h
cside-main/src/: cnode.c  command.c  core.c  nvoid.c  processor.c  system_manager.c  task.c  tboard.c  utils.c  uuid4.c  zenoh.c
cside-main/test/: test_main.c
cside-main/test/tboard/: tboard_adding_task_test_1.c  tboard_adding_task_test_1.output.txt
cside-main/test/temp/: cnode_communication_test_board_1_output.txt  cnode_test_encoder_decoder_output.txt  cnode_test_example.c  test_zenoh_wifi.c  zenoh_multiple_publishers_test_board_2.c  zenoh_test_example.c
cside-main/test/unit/: test_publisher.c  test_zenoh_wifi.c
cside-main/tests/: cnode_communication_test_board_1.c  cnode_communication_test_board_2.c  cnode_test_encoder_decoder.c  cnode_test_example_output.txt  cnode_test_single_task.c  cnode_test_single_task_subscriber.c  cnode_test_single_task_subscriber.txt  tboard_adding_task_test_1.c  tboard_adding_task_test_1.output.txt  test_zenoh_wifi.c  test_zenoh_wifi_output.txt  zenoh_multiple_publishers_test_board_1.c  zenoh_multiple_publishers_test_board_2.c  zenoh_multiple_publishers_test_board_2_output.txt  zenoh_test_example_output.txt
cside-main/tests/OUTDATED/: base.txt  cnode_communication_test_board_2_output.txt  start_tasks.c  start_tasks.txt
cside-main/tests/cnode/: cnode_design_day_demo_controller.c  cnode_design_day_demo_worker.c  cnode_test_single_task.c  (+2 more)
(+36 files in other folders)
